--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5" id="excuse">Hello Rigo!</h1>
+      <div>
+        <button id="GenerateExcuses" class="btn btn-success">
+          generate
+        </button>
+      </div>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
